<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_terminal"   android:title="@string/menu_terminal"/>
        <item android:id="@+id/nav_pkg"        android:title="@string/menu_pkg"/>
        <item android:id="@+id/nav_apk"        android:title="@string/menu_apk"/>
        <item android:id="@+id/nav_code"       android:title="@string/menu_code_guide"/>
        <item android:id="@+id/nav_ascii"      android:title="@string/menu_ascii"/>
        <item android:id="@+id/nav_help"       android:title="@string/menu_help"/>
        <item android:id="@+id/nav_settings"   android:title="@string/menu_settings"/>
        <item android:id="@+id/nav_about"      android:title="@string/menu_about"/>
    </group>
</menu>
